package yowyob.comops.api.hrm.domain.model;

public enum LeaveType {
    ANNUAL,
    SICK,
    MATERNITY,
    PATERNITY,
    UNPAID,
    COMPENSATORY,
    SPECIAL
}
